--- a/style.css
+++ b/style.css
@@ -1,79 +1,96 @@
 body {
     background-color: #0e0007; /* fundo escuro total */
     color: #f2f2f2;
-  }
+}
 
-  .pagin h1, .pagin h3, .pagin p {
-    width: 90%;
-    font-size: 22px; /* fonte aumentada */
-    margin: 10px auto;
-    left: auto;
-    margin-left: 5%;
-    top: auto;
-    color: #f2c9ff;
-    text-align: center;
-    font-size: 30px;
-  }
+.pagin h1, .pagin h3, .pagin p {
+  width: 90%;
+  font-size: 22px; /* fonte aumentada */
+  margin: 10px auto;
+  left: auto;
+  margin-left: 5%;
+  top: auto;
+  color: #f2c9ff;
+  text-align: center;
+  font-size: 30px;
+}
 
-  #botaoMusica1,
-  #botaoMusica {
-    background-color: #0e0007;
-    color: white;
-    width: 15%;
-    height: 50px;
-    margin: 20px auto;
-    left: auto;
-    margin-left: 45%;
-    transform: none;
-    font-size: 18px;
-    border-radius: 20px;
-    border: 2px solid rgb(240, 2, 113);
-    cursor: pointer;
-  }
+#botaoMusica1 {
+  display: block;
+  background-color: #0e0007;
+  color: white;
+  width: 20%;
+  height: 8vh;
+  margin: 20px auto;
+  left: auto;
+  margin-left: 40%;
+  transform: none;
+  font-size: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  border-radius: 20px;
+  border: 2px solid rgb(240, 2, 113);
+  cursor: pointer;
+}
+
+#botaoMusica {
+  display: block;
+  background-color: #0e0007;
+  color: white;
+  width: 15%;
+  height: 8vh;
+  border: 2px solid #eb005a;
+  border-radius: 20px;
+  margin-top: 200px;
+  margin-left: 700px;
+  text-align: center;
+  font-size: 20px;
+  cursor: pointer;
+
+}
 
 
-  .imagens1 .texto1 p,
-  .imagens2 .texto2 p,
-  .imagens3 .texto3 p,
-  .imagens4 .texto4 p {
-    width: 45%;
-    left: auto;
-    top: auto;
-    height: auto;
-    font-family: 'Dancing Script', cursive;
-    font-size: 20px; /* fonte aumentada */
-    margin: 10px auto;
-    background-color: #1e1e1e; /* fundo escuro */
-    color: #f2f2f2; /* texto claro */
-    padding: 15px;
-  }
+.imagens1 .texto1 p,
+.imagens2 .texto2 p,
+.imagens3 .texto3 p,
+.imagens4 .texto4 p {
+  width: 45%;
+  left: auto;
+  top: auto;
+  height: auto;
+  font-family: 'Dancing Script', cursive;
+  font-size: 25px; /* fonte aumentada */
+  margin: 10px auto;
+  background-color: #1e1e1e; /* fundo escuro */
+  color: #f2f2f2; /* texto claro */
+  padding: 15px;
+}
 
-  .imagens1 img,
-  .imagens2 img,
-  .imagens3 img,
-  .imagens4 img {
-    position: relative;
-    left: auto;
-    top: auto;
-    max-width: 10%; /* imagens menores */
-    margin: 10px auto;
-    display: block;
-  }
+.imagens1 img,
+.imagens2 img,
+.imagens3 img,
+.imagens4 img {
+  position: relative;
+  left: auto;
+  top: auto;
+  max-width: 10%; /* imagens menores */
+  margin: 10px auto;
+  display: block;
+}
 
-  .imagens1,
-  .imagens2,
-  .imagens3,
-  .imagens4 {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
+.imagens1,
+.imagens2,
+.imagens3,
+.imagens4 {
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
 
-  img {
-    max-width: 40%;
-    height: auto;
-    border-radius: 20px;
-  }
+img {
+  max-width: 40%;
+  height: auto;
+  border-radius: 20px;
+}
 
 
 
