--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
   border: 2px solid #eb005a;
   border-radius: 20px;
   margin-top: 200px;
-  margin-left: 700px;
+  left: auto;
   text-align: center;
   font-size: 20px;
   cursor: pointer;
@@ -72,8 +72,8 @@ body {
   position: relative;
   left: auto;
   top: auto;
-  max-width: 10%; /* imagens menores */
-  margin: 10px auto;
+  max-width: 20%; /* imagens menores */
+  margin: 20px auto;
   display: block;
 }
 
